[project]
name = "serverless-test"
version = "0.1.0"
description = "Serverless flaky test detector using RunPod"
requires-python = ">=3.12"
dependencies = [
    "runpod>=1.8.1",
    "pyyaml>=6.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.40.2",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "pylint>=3.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
]
validation = [
    "anthropic>=0.40.0",  # For AI-powered fix suggestions
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "dashboard.py",  # UI code with different conventions
    "scripts/",      # Integration scripts
    "local_test.py", # Local testing script
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and more
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806", "E402"]  # Allow test function names and delayed imports

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = "runpod.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

# Allow untyped code in tests (fixtures, mocks, etc.)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=worker",
    "--cov=config",
    "--cov=database",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["worker.py", "config.py", "database.py"]
omit = []

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pylint.main]
ignore = [".git", "__pycache__", ".pytest_cache", ".venv", "venv"]
jobs = 0  # Auto-detect CPU cores

[tool.pylint."messages control"]
# Focus on bugs and potential issues, disable style/documentation checks
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "W0212",  # protected-access (allow for tests)
    "C0103",  # invalid-name (allow short variable names)
]
# Enable important checks that catch real bugs
enable = [
    "W0621",  # redefined-outer-name (variable shadowing!)
    "W0622",  # redefined-builtin
    "W0611",  # unused-import
    "W0612",  # unused-variable
    "E1101",  # no-member
    "E1102",  # not-callable
    "E0602",  # undefined-variable
    "E0611",  # no-name-in-module
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.basic]
good-names = ["i", "j", "k", "v", "ex", "Run", "_", "f", "e", "t", "x", "y", "z", "id", "df", "db", "ax", "fig"]

[tool.bandit]
exclude_dirs = [".venv", "venv", "tests"]
skips = ["B101"]  # Skip assert_used (fine in test code)
